<package>
  <name>volksbot_driver</name>
  <version>0.0.2</version>
  <description>

     Driver for the Volksbot robot. Depends on libepos2.

  </description>
  <author>Jochen Sprickerhof</author>
   <maintainer email="jochen@sprickerhof.de">Jochen Sprickerhof</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/volksbot</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>libepos2-dev</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>libepos2-dev</run_depend>

</package>


